fixed preview so it won't go offscreen

--- a/books/src/styles/mainpage.css
+++ b/books/src/styles/mainpage.css
@@ -11,13 +11,13 @@
     	align-items: center;	
 	}
 
-	h1, h2 {
+	h1, h2, h3 {
 		font-family: 'Indie Flower', cursive;
 		font-size: xxx-large;
 		color: rgb(117, 72, 20);
 		background-color: rgb(219, 204, 186);
 		border-radius: 20px;
-		margin: 10%;
+		margin: 10px;
 		border-style: dashed;
 		border-width: 5px;
 	}
@@ -26,7 +26,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		width: 30%; /* Adjust the width as needed */
+		width: 30%; 
 		background-image: url('/books.jpg');
 	}
 	
@@ -61,6 +61,7 @@
 	}
 
 	.book-item {
+		position: relative;
 		background-color: rgb(252, 247, 241);
 		border-radius: 20px;
 		padding: 5%;
@@ -69,8 +70,9 @@
 	}
 
 	#tooltip {
-		position: relative;
-		display: block;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 	}
 
 	#tooltip #tooltiptext {
@@ -93,8 +95,9 @@
 
 		position: absolute;
 		z-index: 1;
-		top: 5px;
-		left: 102%;
+		top: 0;
+		left: 50%;
+		transform: translateX(-50%)
 	}
 
 	#tooltip:hover #tooltiptext {
